@@ -75,7 +75,7 @@ public class HardCodedCredentialsInVariablesAndUrisCheck extends PHPVisitorCheck
     return Stream.of(credentialWords.split(","))
       .map(String::trim)
       .map(word -> Pattern.compile(word + suffix, Pattern.CASE_INSENSITIVE))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   @Override
