@@ -81,7 +81,7 @@ public class CookieDomainCheck extends FunctionUsageCheck implements PhpIniCheck
     return phpIniFile.directivesForName("session.cookie_domain").stream()
       .filter(d -> isFirstLevelDomain(d.value().text()))
       .map(d -> BasePhpIniIssue.newIssue(MESSAGE).line(d.name().line()))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private static boolean isFirstLevelDomain(String domain) {
