@@ -62,12 +62,12 @@ public class ExpandableStringLiteralTreeImpl extends PHPTree implements Expandab
     return elements.stream()
       .filter(ExpandableStringCharactersTree.class::isInstance)
       .map(ExpandableStringCharactersTree.class::cast)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   @Override
   public List<ExpressionTree> expressions() {
-    return elements.stream().filter(input -> !input.is(Kind.EXPANDABLE_STRING_CHARACTERS)).collect(Collectors.toList());
+    return elements.stream().filter(input -> !input.is(Kind.EXPANDABLE_STRING_CHARACTERS)).toList();
   }
 
   @Override
